framec/tests/snapshots/dart_snapshots__linear_fsm.snap
---
source: framec/tests/dart_snapshots.rs
expression: "compile_fixture(\"01_linear_fsm\", \"dart\")"
---
class LinearFsmFrameEvent {
    late String _message;
    late List<dynamic> _parameters;

    LinearFsmFrameEvent(String message, List<dynamic> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}


class LinearFsmFrameContext {
    late LinearFsmFrameEvent event;
    dynamic _return;
    late Map<String, dynamic> _data;
    late bool _transitioned;

    LinearFsmFrameContext(LinearFsmFrameEvent event, dynamic default_return) {
        this.event = event;
        this._return = default_return;
        this._data = <String, dynamic>{};
        this._transitioned = false;
    }
}


class LinearFsmCompartment {
    late String state;
    late List<dynamic> state_args;
    late Map<String, dynamic> state_vars;
    late List<dynamic> enter_args;
    late List<dynamic> exit_args;
    dynamic forward_event;
    LinearFsmCompartment? parent_compartment;

    LinearFsmCompartment(String state, [LinearFsmCompartment? parent_compartment = null]) {
        this.state = state;
        this.state_args = [];
        this.state_vars = <String, dynamic>{};
        this.enter_args = [];
        this.exit_args = [];
        this.forward_event = null;
        this.parent_compartment = parent_compartment;
    }

    LinearFsmCompartment copy() {
        final c = LinearFsmCompartment(this.state, this.parent_compartment);
        c.state_args = List<dynamic>.from(this.state_args);
        c.state_vars = Map<String, dynamic>.from(this.state_vars);
        c.enter_args = List<dynamic>.from(this.enter_args);
        c.exit_args = List<dynamic>.from(this.exit_args);
        c.forward_event = this.forward_event;
        return c;
    }
}


class LinearFsm {
    late List<LinearFsmCompartment> _state_stack;
    late LinearFsmCompartment __compartment;
    LinearFsmCompartment? __next_compartment;
    late List<LinearFsmFrameContext> _context_stack;
    i32 total = 0;

    LinearFsm() {
        this._state_stack = [];
        this._context_stack = [];
        this.__compartment = this.__prepareEnter("Idle", [], []);
        this.__next_compartment = null;
    }

    void _frame_init() {
        final __e = LinearFsmFrameEvent("\$>", __compartment.enter_args);
        final __ctx = LinearFsmFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(__e);
        _context_stack.removeLast();
    }

    static LinearFsm _create() {
        final c = LinearFsm();
        c._frame_init();
        return c;
    }

    Map<String, List<String>> hsm_chain() {
        return {
            "Idle": ["Idle"],
            "Active": ["Active"],
            "Done": ["Done"],
        };
    }
    LinearFsmCompartment __prepareEnter(String leaf, List<dynamic> state_args, List<dynamic> enter_args) {
        LinearFsmCompartment? comp = null;
        for (final name in hsm_chain()[leaf]!) {
            final new_comp = LinearFsmCompartment(name);
            new_comp.state_args = List<dynamic>.from(state_args);
            new_comp.enter_args = List<dynamic>.from(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp!;
    }

    void __prepareExit(List<dynamic> exit_args) {
        LinearFsmCompartment? comp = __compartment;
        while (comp != null) {
            comp.exit_args = List<dynamic>.from(exit_args);
            comp = comp.parent_compartment;
        }
    }

    void __kernel(LinearFsmFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            final next_compartment = __next_compartment!;
            __next_compartment = null;
            // Exit the current (leaf) state.
            final exit_event = LinearFsmFrameEvent("<\$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            final forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                final enter_event = LinearFsmFrameEvent("\$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message == "\$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                final enter_event = LinearFsmFrameEvent("\$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            for (final ctx in _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    void __router(LinearFsmFrameEvent __e) {
        switch (__compartment.state) {
            case "Idle":
                _state_Idle(__e, __compartment);
                break;
            case "Active":
                _state_Active(__e, __compartment);
                break;
            case "Done":
                _state_Done(__e, __compartment);
                break;
        }
    }

    void __transition(LinearFsmCompartment next_compartment) {
        __next_compartment = next_compartment;
    }

    void start() {
        final __e = LinearFsmFrameEvent("start", []);
        final __ctx = LinearFsmFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(__e);
        _context_stack.removeLast();
    }

    void progress(i32 amount) {
        final __e = LinearFsmFrameEvent("progress", [amount]);
        final __ctx = LinearFsmFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(__e);
        _context_stack.removeLast();
    }

    void finish() {
        final __e = LinearFsmFrameEvent("finish", []);
        final __ctx = LinearFsmFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(__e);
        _context_stack.removeLast();
    }

    void _state_Idle(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        if (__e._message == "start") {
            this._s_Idle_hdl_user_start(__e, compartment);
            return;
        }
    }

    void _state_Active(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        if (__e._message == "finish") {
            this._s_Active_hdl_user_finish(__e, compartment);
            return;
        }
        if (__e._message == "progress") {
            this._s_Active_hdl_user_progress(__e, compartment);
            return;
        }
    }

    void _state_Done(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {

    }

    void _s_Idle_hdl_user_start(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        final __compartment = this.__prepareEnter("Active", [], []);
        this.__transition(__compartment);
        return;
    }

    void _s_Active_hdl_user_finish(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        final __compartment = this.__prepareEnter("Done", [], []);
        this.__transition(__compartment);
        return;
    }

    void _s_Active_hdl_user_progress(LinearFsmFrameEvent __e, LinearFsmCompartment compartment) {
        final amount = __e._parameters[0];
        // self mutation exercised below via domain field
        self.total = self.total + amount
    }
}
